bloonix-plugins-postfix (0.5) released at 2014-11-30

    * Added the info that sudo is necessary to execute this plugin.

bloonix-plugins-postfix (0.4) released at 2014-11-03

    * Updated the license information.

bloonix-plugins-postfix (0.3) released at 2014-08-25

    * Licence added and old releases deleted.

bloonix-plugins-postfix (0.2) released at 2013-05-14

    * The statistics of all plugins is now printed in JSON format.

bloonix-plugins-postfix (0.1) released at 2011-11-04

    * Initial release.